Added Blender and other sections to the movies website. To be fixed later

--- a/index.html
+++ b/index.html
@@ -22,11 +22,36 @@
     <main class="main_home">
         <h1>Movies</h1>
         <div class="line1">
+            <!-- Movie one. -->
             <a href="./Movie_webpages/Artemis_Fowl.html" class="link">
                 <div class="movie_image_holder">
                     <img src="./Images/Movie Images/Artemis.jpg" alt="Artemis Fowl" class="movie_image">
                 </div>
                 <p class="movie_name">Artemis Fowl</p>
+                <div class="movie_info">
+                    <p class="movie_year">2020</p>
+                    <p class="movie_time">1:33:44</p>
+                </div>
+            </a>
+
+            <!-- Movie two. -->
+            <a href="./Movie_webpages/Artemis_Fowl.html" class="link">
+                <div class="movie_image_holder">
+                    <img src="./Images/Movie Images/Artemis.jpg" alt="Artemis Fowl" class="movie_image">
+                </div>
+                <p class="movie_name">Artemis Fowl</p>
+                <div class="movie_info">
+                    <p class="movie_year">2020</p>
+                    <p class="movie_time">1:33:44</p>
+                </div>
+            </a>
+
+            <!-- Movie three. -->
+            <a href="./Movie_webpages/Blended.html" class="link">
+                <div class="movie_image_holder">
+                    <img src="./Images/Movie Images/Blended.jpg" alt="Artemis Fowl" class="movie_image">
+                </div>
+                <p class="movie_name">Blended</p>
                 <div class="movie_info">
                     <p class="movie_year">2020</p>
                     <p class="movie_time">1:33:44</p>
