--- a/Movie_webpages/Blended.html
+++ b/Movie_webpages/Blended.html
@@ -9,7 +9,7 @@
     <link href="https://fonts.googleapis.com/css?family=Titillium+Web:200,200italic,300,300italic,regular,italic,600,600italic,700,700italic,900" rel="stylesheet" />
     <link href="https://fonts.googleapis.com/css?family=Quicksand:300,regular,500,600,700" rel="stylesheet" />
     <script src="../script.js" defer></script>
-    <title>Giveth Movies - Artemis_Fowl</title>
+    <title>Giveth Movies - Blended</title>
 </head>
 <body>
     <header>
@@ -22,7 +22,7 @@
     <main class="movie_main">
         <!-- <iframe class="movie_frame" width="640" height="360" frameborder="0" src="https://mega.nz/embed/KJgiWDBT#9gL_dXM2JxPF_7QVxFep3DmrvPp4td42WKORPodMyNA!" allowfullscreen ></iframe> -->
         <iframe class="movie_frame" src="https://drive.google.com/file/d/1WDEjvBOd2_7oj0T4IHrlsui2Fy4r4KLA/preview" width="640" height="480" allow="autoplay"></iframe>
-        <h1 class="h1_movie_title">ARTEMIS FOWL</h1>
+        <h1 class="h1_movie_title">Blended</h1>
         <a href="https://mega.nz/file/KJgiWDBT#9gL_dXM2JxPF_7QVxFep3DmrvPp4td42WKORPodMyNA" target="_blank" class="download_link">Download</a>
     </main>
 </body>
