--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <h1>Movies</h1>
         <div class="line1">
             <!-- Movie one. -->
-            <a href="./Movie_webpages/Artemis_Fowl.html" class="link">
+            <a href="./Movie_webpages/Movie.html" class="link">
                 <div class="movie_image_holder">
                     <img src="./Images/Movie Images/Artemis.jpg" alt="Artemis Fowl" class="movie_image">
                 </div>
@@ -35,7 +35,7 @@
             </a>
 
             <!-- Movie two. -->
-            <a href="./Movie_webpages/Artemis_Fowl.html" class="link">
+            <a href="./Movie_webpages/Movie.html" class="link">
                 <div class="movie_image_holder">
                     <img src="./Images/Movie Images/Artemis.jpg" alt="Artemis Fowl" class="movie_image">
                 </div>
@@ -47,7 +47,7 @@
             </a>
 
             <!-- Movie three. -->
-            <a href="./Movie_webpages/Blended.html" class="link">
+            <a href="./Movie_webpages/Movie.html" class="link">
                 <div class="movie_image_holder">
                     <img src="./Images/Movie Images/Blended.jpg" alt="Artemis Fowl" class="movie_image">
                 </div>
