--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <h1>Movies</h1>
         <div class="line1">
             <!-- Movie one. -->
-            <a href="./Movie_webpages/Movie.html" class="link">
+            <a href="./Movie_webpages/Movie.html?movie=ArtemisFowl" class="link">
                 <div class="movie_image_holder">
                     <img src="./Images/Movie Images/Artemis.jpg" alt="Artemis Fowl" class="movie_image">
                 </div>
@@ -35,14 +35,14 @@
             </a>
 
             <!-- Movie two. -->
-            <a href="./Movie_webpages/Movie.html" class="link">
+            <a href="./Movie_webpages/Movie.html?movie=Atlas" class="link">
                 <div class="movie_image_holder">
-                    <img src="./Images/Movie Images/Artemis.jpg" alt="Artemis Fowl" class="movie_image">
+                    <img src="./Images/Movie Images/Atlas.jpg" alt="Atlas" class="movie_image">
                 </div>
-                <p class="movie_name">Artemis Fowl</p>
+                <p class="movie_name">Atlas</p>
                 <div class="movie_info">
-                    <p class="movie_year">2020</p>
-                    <p class="movie_time">1:33:44</p>
+                    <p class="movie_year">2024</p>
+                    <p class="movie_time">2:00:05</p>
                 </div>
             </a>
 
