Added an Error page(404), Added more Movies, Series will be coming out soon.

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <a href="index.html" class="nav_links">Home</a>
     </header>
     <main class="main_home">
-        <h1>Movies</h1>
+        <h2 class="category_heading">Movies</h2>
         <div class="line1">
             <!-- Movie one. -->
             <a href="./Movie_webpages/Movie.html?movie=ArtemisFowl" class="link">
@@ -47,7 +47,7 @@
             </a>
 
             <!-- Movie three. -->
-            <a href="./Movie_webpages/Movie.html" class="link">
+            <a href="./Movie_webpages/Movie.html?movie=Blended" class="link">
                 <div class="movie_image_holder">
                     <img src="./Images/Movie Images/Blended.jpg" alt="Artemis Fowl" class="movie_image">
                 </div>
@@ -57,10 +57,46 @@
                     <p class="movie_time">1:33:44</p>
                 </div>
             </a>
+            <!-- Movie four. -->
+            <a href="./Movie_webpages/Movie.html?movie=StevenUniverseTheMovie" class="link">
+                <div class="movie_image_holder">
+                    <img src="./Images/Series Images/StevenUniverseTheMovie.jpg" alt="Steven Universe The Movie" class="movie_image">
+                </div>
+                <p class="movie_name">Steven Universe The <br>Movie</p>
+                <div class="movie_info">
+                    <p class="movie_year">2019</p>
+                    <p class="movie_time">1:22:43</p>
+                </div>
+            </a>
+            <!-- Movie fivs. -->
+            <a href="./Movie_webpages/Movie.html?movie=TheMortalInstrumentsCityOfBones" class="link">
+                <div class="movie_image_holder">
+                    <img src="./Images/Movie Images/TheMortalInstrumentsCityOfBones.jpg" alt="Artemis Fowl" class="movie_image">
+                </div>
+                <p class="movie_name">The Mortal Instruments <br>City Of Bones</p>
+                <div class="movie_info">
+                    <p class="movie_year">2013</p>
+                    <p class="movie_time">2:10:14</p>
+                </div>
+            </a>
+        </div>
+
+        <h2 class="category_heading">Series</h2>
+        <div class="line2">
+            <!-- Movie one. -->
+            <!-- <a href="./Serie_webpages/Serie.html?serie=StevenUniverse" class="link"> -->
+            <a href="./Other_Webpages/Error_404.html" class="link">
+                <div class="movie_image_holder">
+                    <img src="./Images/Series Images/StevenUniverse.jpg" alt="Steven Universe" class="movie_image">
+                </div>
+                <p class="movie_name">Steven Universe</p>
+                <div class="movie_info">
+                    <p class="movie_year">2013-2019</p>
+                    <p class="movie_time">29:33:00</p>
+                </div>
+            </a>
+
         </div>
     </main>
-    <footer>
-        <!-- To be filled out last -->
-    </footer>
 </body>
 </html>
