Added more movies and series. Series will be coming out soon:)

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
             <!-- Movie four. -->
             <a href="./Movie_webpages/Movie.html?movie=StevenUniverseTheMovie" class="link">
                 <div class="movie_image_holder">
-                    <img src="./Images/Series Images/StevenUniverseTheMovie.jpg" alt="Steven Universe The Movie" class="movie_image">
+                    <img src="./Images//Movie Images/StevenUniverseTheMovie.jpg" alt="Steven Universe The Movie" class="movie_image">
                 </div>
                 <p class="movie_name">Steven Universe The <br>Movie</p>
                 <div class="movie_info">
@@ -68,7 +68,8 @@
                     <p class="movie_time">1:22:43</p>
                 </div>
             </a>
-            <!-- Movie fivs. -->
+            
+            <!-- Movie five. -->
             <a href="./Movie_webpages/Movie.html?movie=TheMortalInstrumentsCityOfBones" class="link">
                 <div class="movie_image_holder">
                     <img src="./Images/Movie Images/TheMortalInstrumentsCityOfBones.jpg" alt="Artemis Fowl" class="movie_image">
@@ -79,11 +80,72 @@
                     <p class="movie_time">2:10:14</p>
                 </div>
             </a>
+
+            <!-- Movie six. -->
+            <a href="./Movie_webpages/Movie.html?movie=DespicableMe4" class="link">
+                <div class="movie_image_holder">
+                    <img src="./Images/Movie Images/Despicable_Me_4.jpg" alt="Despicable Me 4" class="movie_image">
+                </div>
+                <p class="movie_name">Despicable Me 4</p>
+                <div class="movie_info">
+                    <p class="movie_year">2024</p>
+                    <p class="movie_time">1:34:31</p>
+                </div>
+            </a>
+
+            <!-- Movie seven. -->
+            <a href="./Movie_webpages/Movie.html?movie=InsideOut2" class="link">
+                <div class="movie_image_holder">
+                    <img src="./Images/Movie Images/Inside_out_2.jpg" alt="Inside out 2" class="movie_image">
+                </div>
+                <p class="movie_name">Inside Out 2</p>
+                <div class="movie_info">
+                    <p class="movie_year">2024</p>
+                    <p class="movie_time">1:36:20</p>
+                </div>
+            </a>
+
+            <!-- Movie eight. -->
+            <a href="./Movie_webpages/Movie.html?movie=Coco" class="link">
+                <div class="movie_image_holder">
+                    <img src="./Images/Movie Images/Coco.jpg" alt="Coco" class="movie_image">
+                </div>
+                <p class="movie_name">Coco</p>
+                <div class="movie_info">
+                    <p class="movie_year">2017</p>
+                    <p class="movie_time">1:45:02</p>
+                </div>
+            </a>
+
+            <!-- Movie nine. -->
+            <a href="./Movie_webpages/Movie.html?movie=TransformersOne" class="link">
+                <div class="movie_image_holder">
+                    <img src="./Images/Movie Images/Transformers_One.jpg" alt="Transformers One" class="movie_image">
+                </div>
+                <p class="movie_name">Transformers One</p>
+                <div class="movie_info">
+                    <p class="movie_year">2024</p>
+                    <p class="movie_time">1:36:42</p>
+                </div>
+            </a>
+
+            <!-- Movie 10. -->
+            <a href="./Movie_webpages/Movie.html?movie=UltramanRising" class="link">
+                <div class="movie_image_holder">
+                    <img src="./Images/Movie Images/Ultraman Rising.jpg" alt="Ultraman Rising" class="movie_image">
+                </div>
+                <p class="movie_name">Ultraman Rising</p>
+                <div class="movie_info">
+                    <p class="movie_year">2024</p>
+                    <p class="movie_time">2:01:00</p>
+                </div>
+            </a>
         </div>
 
+        <!-- Series -->
         <h2 class="category_heading">Series</h2>
         <div class="line2">
-            <!-- Movie one. -->
+            <!-- Serie one. -->
             <!-- <a href="./Serie_webpages/Serie.html?serie=StevenUniverse" class="link"> -->
             <a href="./Other_Webpages/Error_404.html" class="link">
                 <div class="movie_image_holder">
@@ -92,7 +154,124 @@
                 <p class="movie_name">Steven Universe</p>
                 <div class="movie_info">
                     <p class="movie_year">2013-2019</p>
-                    <p class="movie_time">29:33:00</p>
+                    <p class="movie_rating"><i class="fa-solid fa-star"></i> 8.2</p>
+                </div>
+            </a>
+
+            <!-- Serie two. -->
+            <!-- <a href="./Serie_webpages/Serie.html?serie=GravityFalls" class="link"> -->
+            <a href="./Other_Webpages/Error_404.html" class="link">
+                <div class="movie_image_holder">
+                    <img src="./Images/Series Images/Gravity Falls.jpg" alt="Gravity Falls" class="movie_image">
+                </div>
+                <p class="movie_name">Gravity Falls</p>
+                <div class="movie_info">
+                    <p class="movie_year">2012-2016</p>
+                    <p class="movie_rating"><i class="fa-solid fa-star"></i> 8.9</p>
+                </div>
+            </a>
+
+            <!-- Serie three. -->
+            <!-- <a href="./Serie_webpages/Serie.html?serie=TheAmazingWorldOfGumball" class="link"> -->
+            <a href="./Other_Webpages/Error_404.html" class="link">
+                <div class="movie_image_holder">
+                    <img src="./Images/Series Images/The_Amazing_World_Of_Gumball.jpg" alt="The Amazing World of Gumball" class="movie_image">
+                </div>
+                <p class="movie_name">The Amazing World <br> Of Gumball</p>
+                <div class="movie_info">
+                    <p class="movie_year">2011-2019</p>
+                    <p class="movie_rating"><i class="fa-solid fa-star"></i> 8.4</p>
+                </div>
+            </a>
+
+            <!-- Serie four. -->
+            <!-- <a href="./Serie_webpages/Serie.html?serie=Loki" class="link"> -->
+            <a href="./Other_Webpages/Error_404.html" class="link">
+                <div class="movie_image_holder">
+                    <img src="./Images/Series Images/Loki.jpg" alt="Loki" class="movie_image">
+                </div>
+                <p class="movie_name">Loki</p>
+                <div class="movie_info">
+                    <p class="movie_year">2021-2023</p>
+                    <p class="movie_rating"><i class="fa-solid fa-star"></i> 8.2</p>
+                </div>
+            </a>
+
+            <!-- Serie five. -->
+            <!-- <a href="./Serie_webpages/Serie.html?serie=TheLegendOfkorra" class="link"> -->
+            <a href="./Other_Webpages/Error_404.html" class="link">
+                <div class="movie_image_holder">
+                    <img src="./Images/Series Images/TheLegendOfKorra.jpg" alt="The Legend Of Korra" class="movie_image">
+                </div>
+                <p class="movie_name">The Legend Of Korra</p>
+                <div class="movie_info">
+                    <p class="movie_year">2012-2014</p>
+                    <p class="movie_rating"><i class="fa-solid fa-star"></i> 8.3</p>
+                </div>
+            </a>
+
+            <!-- Serie six. -->
+            <!-- <a href="./Serie_webpages/Serie.html?serie=PhineasAndFerb" class="link"> -->
+            <a href="./Other_Webpages/Error_404.html" class="link">
+                <div class="movie_image_holder">
+                    <img src="./Images/Series Images/Phineas_and_Ferb.jpg" alt="Phineas and Ferb" class="movie_image">
+                </div>
+                <p class="movie_name">Phineas and Ferb</p>
+                <div class="movie_info">
+                    <p class="movie_year">2007-2015</p>
+                    <p class="movie_rating"><i class="fa-solid fa-star"></i> 8.1</p>
+                </div>
+            </a>
+
+            <!-- Serie seven. -->
+            <!-- <a href="./Serie_webpages/Serie.html?serie=Knuckles" class="link"> -->
+            <a href="./Other_Webpages/Error_404.html" class="link">
+                <div class="movie_image_holder">
+                    <img src="./Images/Series Images/Knuckles.jpg" alt="Knuckles" class="movie_image">
+                </div>
+                <p class="movie_name">Knuckles</p>
+                <div class="movie_info">
+                    <p class="movie_year">2024</p>
+                    <p class="movie_rating"><i class="fa-solid fa-star"></i> 6.2</p>
+                </div>
+            </a>
+
+            <!-- Serie eight. -->
+            <!-- <a href="./Serie_webpages/Serie.html?serie=AvatarTheLastAirBender" class="link"> -->
+            <a href="./Other_Webpages/Error_404.html" class="link">
+                <div class="movie_image_holder">
+                    <img src="./Images/Series Images/Avatar_The_last_Airbender.jpg" alt="Avatar The Last AirBender" class="movie_image">
+                </div>
+                <p class="movie_name">Avatar The Last <br> AirBender</p>
+                <div class="movie_info">
+                    <p class="movie_year">2005-2008</p>
+                    <p class="movie_rating"><i class="fa-solid fa-star"></i> 9.3</p>
+                </div>
+            </a>
+
+            <!-- Serie nine. -->
+            <!-- <a href="./Serie_webpages/Serie.html?serie=Ben10" class="link"> -->
+            <a href="./Other_Webpages/Error_404.html" class="link">
+                <div class="movie_image_holder">
+                    <img src="./Images/Series Images/Ben10.jpg" alt="Ben10" class="movie_image">
+                </div>
+                <p class="movie_name">Ben 10</p>
+                <div class="movie_info">
+                    <p class="movie_year">2005-2008</p>
+                    <p class="movie_rating"><i class="fa-solid fa-star"></i> 7.5</p>
+                </div>
+            </a>
+
+            <!-- Serie ten. -->
+            <!-- <a href="./Serie_webpages/Serie.html?serie=MyHeroAcademia" class="link"> -->
+            <a href="./Other_Webpages/Error_404.html" class="link">
+                <div class="movie_image_holder">
+                    <img src="./Images/Series Images/My_Hero_Academia.jpg" alt="My Hero Academia" class="movie_image">
+                </div>
+                <p class="movie_name">My Hero Academia</p>
+                <div class="movie_info">
+                    <p class="movie_year">2016-2024</p>
+                    <p class="movie_rating"><i class="fa-solid fa-star"></i> 8.2</p>
                 </div>
             </a>
 
