Updated Steven Universe with a better quality. Added actual 10 episodes to Steven Universe. Stored the scripts in a separate directory. Hope this works:)!!

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css" />
     <link href="https://fonts.googleapis.com/css?family=Titillium+Web:200,200italic,300,300italic,regular,italic,600,600italic,700,700italic,900" rel="stylesheet" />
     <link href="https://fonts.googleapis.com/css?family=Quicksand:300,regular,500,600,700" rel="stylesheet" />
-    <script src="script.js" defer></script>
+    <script src="./Scripts/movie_script.js" defer></script>
     <title>Giveth Movies - Watch and Downlod Movies...</title>
 </head>
 <body>
@@ -146,8 +146,8 @@
         <h2 class="category_heading">Series</h2>
         <div class="line2">
             <!-- Serie one. -->
-            <!-- <a href="./Serie_webpages/Serie.html?serie=StevenUniverse" class="link"> -->
-            <a href="./Other_Webpages/Error_404.html" class="link">
+            <a href="./Serie_webpages/Serie.html?serie=StevenUniverse" class="link">
+            <!-- <a href="./Other_Webpages/Error_404.html" class="link"> -->
                 <div class="movie_image_holder">
                     <img src="./Images/Series Images/StevenUniverse.jpg" alt="Steven Universe" class="movie_image">
                 </div>
