--- a/Serie_webpages/Serie.html
+++ b/Serie_webpages/Serie.html
@@ -9,6 +9,7 @@
     <link href="https://fonts.googleapis.com/css?family=Titillium+Web:200,200italic,300,300italic,regular,italic,600,600italic,700,700italic,900" rel="stylesheet" />
     <link href="https://fonts.googleapis.com/css?family=Quicksand:300,regular,500,600,700" rel="stylesheet" />
     <script src="../Scripts/serie_script.js" defer></script>
+    <!-- <script src="../test.js" defer></script> -->
     <title>Giveth Movies - Serie</title>
     <style>
 
@@ -25,7 +26,10 @@
 
     <main class="serie_main">
         <!-- Responsive Iframe -->
-        <iframe class="serie_frame" src="https://drive.google.com/file/d/16wJsTQiByn78dUfACh6MLExo3RtV36Ys/preview" id="serie_iframe"  allowfullscreen></iframe> 
+        <iframe class="serie_frame" id="serie_iframe"  allowfullscreen></iframe> 
+        <script>
+            document.getElementById("serie_iframe").src = "https://www.youtube.com/embed/206ZciQfaTo?si=2aphoVwleM7WwD3P";
+        </script>
         
         <h1 class="h1_serie_title" id="serie_title">Steven Universe: The series</h1>
 
