--- a/index.html
+++ b/index.html
@@ -147,7 +147,6 @@
         <div class="line2">
             <!-- Serie one. -->
             <a href="./Serie_webpages/Serie.html?serie=StevenUniverse" class="link">
-            <!-- <a href="./Other_Webpages/Error_404.html" class="link"> -->
                 <div class="movie_image_holder">
                     <img src="./Images/Series Images/StevenUniverse.jpg" alt="Steven Universe" class="movie_image">
                 </div>
@@ -159,8 +158,7 @@
             </a>
 
             <!-- Serie two. -->
-            <!-- <a href="./Serie_webpages/Serie.html?serie=GravityFalls" class="link"> -->
-            <a href="./Other_Webpages/Error_404.html" class="link">
+            <a href="./Serie_webpages/Serie.html?serie=GravityFalls" class="link">
                 <div class="movie_image_holder">
                     <img src="./Images/Series Images/Gravity Falls.jpg" alt="Gravity Falls" class="movie_image">
                 </div>
