Added Loki, Ben10 and finshed Gravity Falls

--- a/index.html
+++ b/index.html
@@ -183,8 +183,7 @@
             </a>
 
             <!-- Serie four. -->
-            <!-- <a href="./Serie_webpages/Serie.html?serie=Loki" class="link"> -->
-            <a href="./Other_Webpages/Error_404.html" class="link">
+            <a href="./Serie_webpages/Serie.html?serie=Loki" class="link">
                 <div class="movie_image_holder">
                     <img src="./Images/Series Images/Loki.jpg" alt="Loki" class="movie_image">
                 </div>
@@ -235,21 +234,20 @@
             </a>
 
             <!-- Serie eight. -->
-            <!-- <a href="./Serie_webpages/Serie.html?serie=AvatarTheLastAirBender" class="link"> -->
+            <!-- <a href="./Serie_webpages/Serie.html?serie=AvatarTheLastAirBenderLiveAction" class="link"> -->
             <a href="./Other_Webpages/Error_404.html" class="link">
                 <div class="movie_image_holder">
-                    <img src="./Images/Series Images/Avatar_The_last_Airbender.jpg" alt="Avatar The Last AirBender" class="movie_image">
+                    <img src="./Images/Series Images/Rise_Of_The_TMNT.jpg" alt="Rise Of The Teenage Mutant Ninja Turtles" class="movie_image">
                 </div>
-                <p class="movie_name">Avatar The Last <br> AirBender</p>
+                <p class="movie_name">Rise Of The <br>Teenage Mutant <br>Ninja Turtles</p>
                 <div class="movie_info">
-                    <p class="movie_year">2005-2008</p>
+                    <p class="movie_year">2018-2020</p>
                     <p class="movie_rating"><i class="fa-solid fa-star"></i> 9.3</p>
                 </div>
             </a>
 
             <!-- Serie nine. -->
-            <!-- <a href="./Serie_webpages/Serie.html?serie=Ben10" class="link"> -->
-            <a href="./Other_Webpages/Error_404.html" class="link">
+            <a href="./Serie_webpages/Serie.html?serie=Ben10" class="link">
                 <div class="movie_image_holder">
                     <img src="./Images/Series Images/Ben10.jpg" alt="Ben10" class="movie_image">
                 </div>
