Completed all series for Steven Universe

--- a/Serie_webpages/Serie.html
+++ b/Serie_webpages/Serie.html
@@ -10,7 +10,7 @@
     <link href="https://fonts.googleapis.com/css?family=Quicksand:300,regular,500,600,700" rel="stylesheet" />
     <script src="../Scripts/serie_script.js" defer></script>
     <!-- <script src="../test.js" defer></script> -->
-    <title id="title">Giveth Movies - Serie</title>
+    <title id="title">Giveth Movies - Serie Page</title>
     <style>
 
     </style>
