Have Finished all seasons for Rise of the Teenage Mutant Turtles

--- a/index.html
+++ b/index.html
@@ -234,8 +234,7 @@
             </a>
 
             <!-- Serie eight. -->
-            <!-- <a href="./Serie_webpages/Serie.html?serie=AvatarTheLastAirBenderLiveAction" class="link"> -->
-            <a href="./Other_Webpages/Error_404.html" class="link">
+            <a href="./Serie_webpages/Serie.html?serie=RiseOfTheTeenageMutantNinjaTurtles" class="link">
                 <div class="movie_image_holder">
                     <img src="./Images/Series Images/Rise_Of_The_TMNT.jpg" alt="Rise Of The Teenage Mutant Ninja Turtles" class="movie_image">
                 </div>
