Attempt to add Email Funtionality to Website

--- a/Other_Webpages/Contact.html
+++ b/Other_Webpages/Contact.html
@@ -23,7 +23,7 @@
     <main class="movie_contact">
         <h1>CONTACT US</h1>
         <!-- <form action="http://localhost:8080/email_app.py" method="POST"> -->
-        <form action="https://givethmovies2024.pythonanywhere.com" method="POST"></form>
+        <form action="https://givethmovies2024.pythonanywhere.com" method="POST">
             <div class="form_divisions">
                 <label for="full_name" class="contact_labels">Full Name</label>
                 <input type="text" name="contact_name" id="name">
