Added Ads to all Serie Page

--- a/Movie_webpages/Movie.html
+++ b/Movie_webpages/Movie.html
@@ -46,7 +46,7 @@
 
     <footer>
         <!-- Footer Content -->
-         <p class="text">Website made by: <span style="color: #EB5E28; font-weight: bolder;"><u>Giveth Movies</u></span></p>
+        <p class="text">Website made by: <span style="color: #EB5E28; font-weight: bolder;"><u>Giveth Movies</u></span> <br><br> This Website if for Educational purposes only <br></p>
          <a href="../Other_Webpages/Contact.html" class="contact_link">Contact Us</a>
     </footer>
 </body>
