Added Movie and Serie Webpages officially, Added more Ads and added a hamburger menu

--- a/Serie_webpages/Serie.html
+++ b/Serie_webpages/Serie.html
@@ -18,9 +18,13 @@
             <i class="fa-solid fa-film logo"></i>
             <h3 class="title">Giveth Movies</h3>
         </div>
-        <a href="../index.html" class="nav_links">Home</a>
-    </header>
-    
+        <div class="link_holder" id="menu">
+            <a href="../index.html" class="nav_links">Home</a>
+            <a href="../Other_Webpages/Error_404.html" class="nav_links">Movies</a>
+            <a href="../Other_Webpages/Error_404.html" class="nav_links">Series</a>
+        </div>
+        <i class="fa-solid fa-bars hamburger"  id="hamburger-icon"></i>
+    </header> 
     <main class="serie_main">
         <!-- Responsive Iframe -->
         <iframe class="serie_frame" id="serie_iframe"  allowfullscreen></iframe> 
