--- a/Movie_webpages/Movie.html
+++ b/Movie_webpages/Movie.html
@@ -21,9 +21,13 @@
             <i class="fa-solid fa-film logo"></i>
             <h3 class="title">Giveth Movies</h3>
         </div>
-        <a href="../index.html" class="nav_links">Home</a>
+        <div class="link_holder" id="menu">
+            <a href="../index.html" class="nav_links">Home</a>
+            <a href="../Other_Webpages/Error_404.html" class="nav_links">Movies</a>
+            <a href="../Other_Webpages/Error_404.html" class="nav_links">Series</a>
+        </div>
+        <i class="fa-solid fa-bars hamburger"  id="hamburger-icon"></i>
     </header>
-
     <main class="movie_main">
         <!-- Responsive Iframe -->
         <iframe class="movie_frame" id="movie_iframe"  allowfullscreen></iframe>
