--- a/Other_Webpages/Error_404.html
+++ b/Other_Webpages/Error_404.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css" />
     <link href="https://fonts.googleapis.com/css?family=Titillium+Web:200,200italic,300,300italic,regular,italic,600,600italic,700,700italic,900" rel="stylesheet" />
     <link href="https://fonts.googleapis.com/css?family=Quicksand:300,regular,500,600,700" rel="stylesheet" />
-    <script src="script.js" defer></script>
+    <script src="../Scripts/movie_script.js" defer></script>
     <title>Giveth Movies - Watch and Downlod Movies...</title>
     <style>
         .main_home
@@ -139,7 +139,12 @@
             <i class="fa-solid fa-film logo"></i>
             <h3 class="title">Giveth Movies</h3>
         </div>
-        <a href="../index.html" class="nav_links">Home</a>
+        <div class="link_holder" id="menu">
+            <a href="../index.html" class="nav_links">Home</a>
+            <a href="../Other_Webpages/Error_404.html" class="nav_links">Movies</a>
+            <a href="../Other_Webpages/Error_404.html" class="nav_links">Series</a>
+        </div>
+        <i class="fa-solid fa-bars hamburger"  id="hamburger-icon"></i>
     </header>
     <main class="main_home">
         <h1 class="error_heading">404</h1>
