--- a/index.html
+++ b/index.html
@@ -1,15 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <!-- Google Tag Manager -->
-    <!-- <script>
-        (function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start': new Date().getTime(),event:'gtm.js'});
-        var f=d.getElementsByTagName(s)[0],
-        j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';
-        j.async=true;j.src = 'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
-        })(window,document,'script','dataLayer','GTM-NPZSBNZS');
-    </script> -->
-    <!-- End Google Tag Manager -->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css"/>
@@ -21,11 +12,6 @@
     <title>Giveth Movies - Watch and Downlod Movies...</title>
 </head>
 <body>
-    <!-- Google Tag Manager (noscript) -->
-    <!-- <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-NPZSBNZS" height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript> -->
-    <!-- End Google Tag Manager (noscript) -->
-    <!-- Default Statcounter code for Giveth Movies https://www.givethmovies.online
--->
     <script type="text/javascript">
         var sc_project=13057842; 
         var sc_invisible=1; 
@@ -43,7 +29,12 @@
             <i class="fa-solid fa-film logo"></i>
             <h3 class="title">Giveth Movies</h3>
         </div>
-        <a href="index.html" class="nav_links">Home</a>
+        <div class="link_holder" id="menu">
+            <a href="index.html" class="nav_links">Home</a>
+            <a href="./Other_Webpages/Error_404.html" class="nav_links">Movies</a>
+            <a href="./Other_Webpages/Error_404.html" class="nav_links">Series</a>
+        </div>
+        <i class="fa-solid fa-bars hamburger"  id="hamburger-icon"></i>
     </header>
     <main class="main_home">
         <h2 class="category_heading">Movies</h2>
@@ -52,7 +43,6 @@
             <a href="./Movie_webpages/Movie.html?movie=ArtemisFowl" class="link">
                 <div class="movie_image_holder">
                     <img src="./Images/Movie Images/Artemis.jpg" alt="Artemis Fowl" class="movie_image">
-                    
                 </div>
                 <p class="movie_name">Artemis Fowl</p>
                 <div class="movie_info">
