Fixed the Entire Website

--- a/Other_Webpages/Contact.html
+++ b/Other_Webpages/Contact.html
@@ -19,9 +19,10 @@
             <h3 class="title">Giveth Movies</h3>
         </div>
         <div class="link_holder" id="menu">
-            <a href="../index.html" class="nav_links">Home</a>
-            <a href="../Other_Webpages/Error_404.html" class="nav_links">Movies</a>
-            <a href="../Other_Webpages/Error_404.html" class="nav_links">Series</a>
+            <a href="../index.html" class="nav_links">Search</a>
+            <a href="../Other_Webpages/home.html" class="nav_links">Home</a>
+            <a href="../Movie_webpages/MovieList.html" class="nav_links">Movies</a>
+            <a href="../Serie_webpages/SerieList.html" class="nav_links">Series</a>
         </div>
         <i class="fa-solid fa-bars hamburger"  id="hamburger-icon"></i>
     </header>
