--- a/Other_Webpages/watch_movie.html
+++ b/Other_Webpages/watch_movie.html
@@ -8,8 +8,8 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css" />
     <link href="https://fonts.googleapis.com/css?family=Titillium+Web:200,200italic,300,300italic,regular,italic,600,600italic,700,700italic,900" rel="stylesheet" />
     <link href="https://fonts.googleapis.com/css?family=Quicksand:300,regular,500,600,700" rel="stylesheet" />
-    <script src="../Scripts/movie_ad_script.js"></script>
     <title>Giveth Movies - Movie</title>
+    <script src="../Scripts/movie_ad_script.js" defer></script>
 </head>
 <body>
     <header>
@@ -47,8 +47,8 @@
     </main>
 
     <script> 
-        // create a div element
-        const div = document.createElement("div");
+            // create a div element
+            const div = document.createElement("div");
         div.id = "pop_Ad";
 
         document.body.appendChild(div)
