Fixed the search.js Script file

--- a/Other_Webpages/results.html
+++ b/Other_Webpages/results.html
@@ -83,5 +83,14 @@
         <p class="text">Website made by: <span style="color: #EB5E28; font-weight: bolder;"><u>Giveth Movies</u></span> <br><br> This Website if for Educational purposes only <br></p>
         <a href="../Other_Webpages/Contact.html" class="contact_link">Contact Us</a>
     </footer>
+    <script>
+    // Toggle the menu when the hamburger icon is clicked
+    const menu = document.getElementById('menu');
+    const hamburgerIcon = document.getElementById('hamburger-icon');
+    
+    hamburgerIcon.addEventListener('click', () => {
+        menu.classList.toggle('active');
+    });
+    </script>
 </body>
 </html>
