--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link href="https://fonts.googleapis.com/css?family=Titillium+Web:200,200italic,300,300italic,regular,italic,600,600italic,700,700italic,900" rel="stylesheet" />
     <link href="https://fonts.googleapis.com/css?family=Quicksand:300,regular,500,600,700" rel="stylesheet" />
     <title>Giveth Movies - Watch and Downlod Movies...</title>
-    <script src="./Scripts/search.js" defer></script>
+    <script src="./Scripts/search.js" ></script>
     <style>
         .main_home
         {
@@ -184,6 +184,13 @@
         }
 
     //learing promises
+    // Toggle the menu when the hamburger icon is clicked
+    const menu = document.getElementById('menu');
+    const hamburgerIcon = document.getElementById('hamburger-icon');
+    
+    hamburgerIcon.addEventListener('click', () => {
+        menu.classList.toggle('active');
+    });
 
     </script>
 </body>
